<resources>
    <string name="app_name">Muscle Mate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="last_workout">Last workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_icon">Select icon</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="set_image_for_workout">Set image for workout</string>
    <string name="exercises">Exercises</string>
    <string name="add_exercise">Add exercise</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_search_text">Enter search text</string>
    <string name="category">Category:</string>
    <string name="muscles">Muscles:</string>
    <string name="equipment">Equipment:</string>
    <string name="variations">Variations:</string>
    <string name="image_showing_the_exercise">Image showing the exercise</string>
</resources>